--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.7.2",
+    "passport-oauth2": "^1.8.0",
     "path": "^0.12.7"
   },
   "name": "discord-appeals",
