base env changes for more setting up options

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ CLIENT_SECRET=INSERT_CLIENT_SECRET
 BOT_TOKEN=INSET_BOT_TOKEN
 GUILD_ID=INSERT_GUILD_ID
 MONGO_URL=INSERT_MONGO_URL
+APPEAL_CHANNEL=INSERT_CHANNEL_ID
