--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "dependencies": {
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "fs": "^0.0.1-security",
     "mongoose": "^8.7.2",
+    "ms": "^2.1.3",
     "passport-oauth2": "^1.8.0",
     "path": "^0.12.7"
   },
